Bug 572605 - Handle intents/links from other apps while Fennec is already running, r=mwu