widget/src/android/AndroidJavaWrappers.cpp
@@ -309,6 +309,11 @@ AndroidGeckoEvent::Init(JNIEnv *jenv, jobject jobj)
             break;
         }
 
+        case LOAD_URI: {
+            ReadCharactersField(jenv);
+            break;
+        }
+
         default:
             break;
     }
